# azsphere-hardware-definition-tools

./: .editorconfig  .eslintignore  .gitattributes  .gitignore  LICENSE.txt  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  publish.yml
features/: HardwareDefinitionPorting.feature  PartnerPinUsageConflictIdentification.feature  PinMappingConflictIdentification.feature  PinMappingGeneration.feature  PinMappingSuggestion.feature
scripts/: e2e.sh  publish.sh
server/: README.md  pack-server.bat  pack-server.sh  package-lock.json  package.json  tsconfig.json
server/src/: CodeActionProvider.ts  appManifestPaths.ts  applicationFile.ts  applicationManifest.ts  cMakeLists.ts  codeActionProvider.ts  diagnostics.ts  hardwareDefinition.ts  hardwareDefinitionHeaderGeneration.ts  hwDefHeaderGeneration.ts  mt3620Controllers.ts  mt3620_controllers.json  mt3620_controllers.ts  parser.ts  pinMappingGeneration.ts  porting.ts  server.ts  startServer.ts  suggestions.ts  utils.ts  validator.ts
testFixture/: ExampleSolution.sln.test  application.json  application1.json  diagnostics.json  mt3620.json  pinblock.json  unknownImport.json
testFixture/applicationA/: CMakeLists.txt  app_manifest.json
testFixture/applicationB/: CMakeLists.txt  app_manifest.json
visualstudio-extension/: AZSphereHardwareDefinitionTools.sln  OVERVIEW.md  README.md  VS_EXTENSION.md  manifest.json
vscode-extension/: .vscodeignore  OVERVIEW.md  README.md  VSCODE_EXTENSION.md  package-lock.json  package.json  prepublish.sh  tsconfig.json
(+56 files in other folders)
